--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>React Time</title>
   <link rel="stylesheet" type="text/css" href="./lib/css/main.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <div id="app"></div>
